--- a/medium/feed.mustache
+++ b/medium/feed.mustache
@@ -41,6 +41,7 @@
         #sidebar ul li {
             padding: 16px;
             border-bottom: 1px solid #ededed;
+            margin-bottom: 0px !important;
         }
         #content {
             width: calc(100% - 275px);
