--- a/medium/feed.mustache
+++ b/medium/feed.mustache
@@ -189,36 +189,36 @@
 </head>
     <body>
       <nav class="topnav navbar navbar-expand-lg navbar-light bg-dark fixed-top">
-      <div class="container">
-      	<a class="navbar-brand" href="/">
-      		<img style="max-width:160px" src="https://lh3.googleusercontent.com/pdS5a8pCwrYEp2dbvBPvBxq1WPO57VexjG0fkCNOSw6lIeUNuLK1PAyizKIWEvX6UgFBVQ9OHzbtkQMhvbS57ZRXww=s320" />
-      	</a>
-      	<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-      		<span class="navbar-toggler-icon"></span>
-      	</button>
-      	<div class="navbar-collapse collapse" id="navbarColor02" style="">
-      		<ul class="navbar-nav ml-auto d-flex align-items-center">
-      			<li class="nav-item">
-      				<a class="nav-link text-white" href="/posts?category=culture">Culture</a>
-      			</li>
-      			<li class="nav-item">
-      				<a class="nav-link text-white" href="/posts?category=fashion">Fashion</a>
-      			</li>
-      			<li class="nav-item">
-      				<a class="nav-link text-white" href="/posts?category=tech">Tech</a>
-      			</li>
-      			<li class="nav-item">
-      				<a class="nav-link text-white" href="/about">About</a>
-      			</li>
-      			<li class="nav-item" id="nav-login">
-      				<a class="nav-link text-white" href="#" style="color:#03a87c" href="#" data-toggle="modal" data-target="#login-modal">Sign In</a>
-      			</li>
-      			<li class="nav-item highlight ml-4" id="login-container">
-      				<a id="nav-register" style="background:#03a87c;color:#fff !important" class="nav-link" href="#" data-toggle="modal" data-target="#register-modal">JOIN VERTEX</a>
-      			</li>
-      		</ul>
-      	</div>
-      </div>
+        <div class="container">
+        	<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+        		<span class="navbar-toggler-icon"></span>
+        	</button>
+          <ul style="margin:auto" class="navbar-nav d-flex align-items-center">
+            <li class="nav-item">
+              <a class="navbar-brand" href="/">
+                <img style="max-width:160px;margin-bottom:12px" src="https://lh3.googleusercontent.com/pdS5a8pCwrYEp2dbvBPvBxq1WPO57VexjG0fkCNOSw6lIeUNuLK1PAyizKIWEvX6UgFBVQ9OHzbtkQMhvbS57ZRXww=s320" />
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="/posts?category=culture">Culture</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="/posts?category=fashion">Fashion</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="/posts?category=tech">Tech</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="/about">About</a>
+            </li>
+            <li class="nav-item" id="nav-login">
+              <a class="nav-link text-white" href="#" style="color:#03a87c" href="#" data-toggle="modal" data-target="#login-modal">Sign In</a>
+            </li>
+            <li class="nav-item highlight ml-4" id="login-container">
+              <a id="nav-register" style="background:#03a87c;color:#fff !important" class="nav-link" href="#" data-toggle="modal" data-target="#register-modal">JOIN VERTEX</a>
+            </li>
+          </ul>
+        </div>
       </nav>
       <!-- End Navbar -->
 
@@ -285,7 +285,9 @@
           var threadsMap = {}
 
           var iframe = document.getElementById('entity-content-iframe')
-          iframe.onload = function() { alert('myframe is loaded') }
+          iframe.onload = function(){
+            alert('myframe is loaded')
+          }
 
           var selectedIndex = 0
           threads.forEach(function(thread, i){
@@ -298,12 +300,10 @@
 
           var setActive = function(id){
             threads.forEach(function(thread){
-              if (thread.id == id){
+              if (thread.id == id)
                 $('#li-'+thread.id).addClass('active')
-              }
-              else {
+              else
                 $('#li-'+thread.id).removeClass('active')
-              }
             })
           }
 
