console log, not alert

--- a/medium/feed.mustache
+++ b/medium/feed.mustache
@@ -286,7 +286,7 @@
 
           var iframe = document.getElementById('entity-content-iframe')
           iframe.onload = function(){
-            alert('myframe is loaded')
+            console.log('myframe is loaded')
           }
 
           var selectedIndex = 0
