extra line break

--- a/medium/feed.mustache
+++ b/medium/feed.mustache
@@ -231,7 +231,8 @@
                   {{#threads}}
                   <li style="line-height:20px" id="li-{{id}}">
                       <a href="#" id="{{id}}" class="sidebar-link">{{subject.title}}</a>
-                      <br /><span style="color:#333;font-size:14px">{{site.name}}</span>
+                      <br /><br />
+                      <span style="color:#333;font-size:14px">{{site.name}}</span>
                   </li>
                   {{/threads}}
               </ul>
