--- a/medium/feed.mustache
+++ b/medium/feed.mustache
@@ -232,6 +232,7 @@
                   <li style="line-height:20px" id="li-{{id}}">
                       <a href="#" id="{{id}}" class="sidebar-link">{{subject.title}}</a>
                       <br /><br />
+                      <a href="/site/{{site.slug}}"><img class="mr-2" style="border-radius:50%" src="{{{site.image}}}=s28-c" /></a>
                       <span style="color:#333;font-size:14px">{{site.name}}</span>
                   </li>
                   {{/threads}}
