--- a/medium/feed.mustache
+++ b/medium/feed.mustache
@@ -240,6 +240,9 @@
           </nav>
 
           <div id="content">
+            <div id="loading-container" class="invisible" style="text-align:center;margin-top:140px">
+              <img src="https://storage.turbo360.co/vertex360-cms-4hujkc/loading.gif" />
+            </div>
             <iframe id="entity-content-iframe" style="width:100%;height:100vh;border:none"></iframe>
             {{>footer-dark}}
           </div>
