--- a/medium/feed.mustache
+++ b/medium/feed.mustache
@@ -267,8 +267,11 @@
           var data = window.__PRELOADED__
           var query = data.query
           var threads = data.threads
+          var threadsMap = data.threadsMap
+          var selectedIndex = data.selectedIndex
+          // var threadsMap = {}
+
           var isLoading = false
-          var threadsMap = {}
 
           var iframe = document.getElementById('entity-content-iframe')
           iframe.onload = function(){
@@ -278,14 +281,13 @@
             $('#entity-content-iframe').removeClass('invisible')
           }
 
-          var selectedIndex = 0
-          threads.forEach(function(thread, i){
-            if (thread.subject.slug == query.current)
-              selectedIndex = i
-
-            threadsMap[thread.id] = thread
-            threadsMap[thread.slug] = thread
-          })
+          // threads.forEach(function(thread, i){
+          //   if (thread.subject.slug == query.current)
+          //     selectedIndex = i
+          //
+          //   threadsMap[thread.id] = thread
+          //   threadsMap[thread.slug] = thread
+          // })
 
           var setActive = function(id){
             threads.forEach(function(thread){
