--- a/medium/feed.mustache
+++ b/medium/feed.mustache
@@ -6,6 +6,15 @@
     <title>Vertex 360</title>
     <meta name="description" content="" />
 
+    <meta property="og:title" content="Vertex 360 | {{meta.title}}" />
+  	<meta property="og:type" content="article" />
+  	<meta property="og:url" content="https://www.vertex360.co/?current={{meta.slug}}" />
+  	<meta property="og:image" content="{{{meta.image}}}=s260-c" />
+  	<meta property="og:image:width" content="260px" />
+  	<meta property="og:image:height" content="260px" />
+  	<meta property="og:description" content="{{meta.preview}}" />
+
+
     {{>head}}
     <style>
         .wrapper {
