--- a/medium/feed.mustache
+++ b/medium/feed.mustache
@@ -8,11 +8,11 @@
 
     <meta property="og:title" content="Vertex 360 | {{meta.title}}" />
   	<meta property="og:type" content="article" />
-  	<meta property="og:url" content="https://www.vertex360.co/?current={{meta.slug}}" />
+  	<meta property="og:url" content="{{{meta.url}}}" />
   	<meta property="og:image" content="{{{meta.image}}}=s260-c" />
   	<meta property="og:image:width" content="260px" />
   	<meta property="og:image:height" content="260px" />
-  	<meta property="og:description" content="{{meta.preview}}" />
+  	<meta property="og:description" content="{{meta.description}}" />
 
 
     {{>head}}
