--- a/medium/feed.mustache
+++ b/medium/feed.mustache
@@ -6,7 +6,7 @@
     <title>Vertex 360</title>
     <meta name="description" content="" />
 
-    <meta property="og:title" content="Vertex 360 | {{meta.title}}" />
+    <meta property="og:title" content="{{meta.title}}" />
   	<meta property="og:type" content="article" />
   	<meta property="og:url" content="{{{meta.url}}}" />
   	<meta property="og:image" content="{{{meta.image}}}=s260-c" />
