--- a/medium/feed.mustache
+++ b/medium/feed.mustache
@@ -252,7 +252,7 @@
             <div id="loading-container" class="" style="text-align:center;margin-top:140px">
               <img src="https://storage.turbo360.co/vertex360-cms-4hujkc/loading.gif" />
             </div>
-            <iframe id="entity-content-iframe" style="width:100%;height:100vh;border:none"></iframe>
+            <iframe id="entity-content-iframe" class="invisible" style="width:100%;height:100vh;border:none"></iframe>
             {{>footer-dark}}
           </div>
       </div>
