--- a/medium/feed.mustache
+++ b/medium/feed.mustache
@@ -242,8 +242,8 @@
                       <small style="font-size:12px;color:#ababab">{{subject.dateString}}</small><br />
                       <a href="#" id="{{id}}" class="sidebar-link">{{subject.title}}</a>
                       <br /><br />
-                      <a href="/site/{{site.slug}}"><img class="mr-2" style="border-radius:50%" src="{{{site.image}}}=s28-c" /></a>
-                      <span style="color:#333;font-size:14px">{{site.name}}</span>
+                      <a target="_blank" href="{{{site.url}}}"><img class="mr-2" style="border-radius:50%" src="{{{site.image}}}=s28-c" /></a>
+                      <a target="_blank" href="{{{site.url}}}" style="color:#333;font-size:14px">{{site.name}}</a>
                   </li>
                   {{/threads}}
               </ul>
