add two more categories

--- a/medium/feed.mustache
+++ b/medium/feed.mustache
@@ -220,9 +220,11 @@
             </li>
             <li class="nav-item ml-4">
               <select id="category-select" style="width:110px;height:34px;border-radius:3px" class="btn btn-danger">
+                <option value="news">News</option>
                 <option value="culture">Culture</option>
                 <option value="politics">Politics</option>
                 <option value="tech">Tech</option>
+                <option value="entertainment">Entertainment</option>
                 <option value="sports">Sports</option>
               </select>
             </li>
