--- a/medium/feed.mustache
+++ b/medium/feed.mustache
@@ -219,7 +219,7 @@
               <a id="nav-register" style="background:#03a87c;border-radius:5px;color:#fff !important" class="nav-link" href="#" data-toggle="modal" data-target="#register-modal">JOIN VERTEX</a>
             </li>
             <li class="nav-item ml-4">
-              <select id="category-select" style="width:110px;height:34px;border-radius:3px" class="btn btn-danger">
+              <select id="category-select" style="min-width:110px;height:34px;border-radius:3px" class="btn btn-danger">
                 <option value="news">News</option>
                 <option value="culture">Culture</option>
                 <option value="politics">Politics</option>
