comment out console log

--- a/medium/feed.mustache
+++ b/medium/feed.mustache
@@ -300,7 +300,7 @@
                 return
               }
 
-              console.log(JSON.stringify(resp.results))
+              // console.log(JSON.stringify(resp.results))
               selectedIndex = 0
               threads = resp.results
               threads.forEach((thread, i) => {
