--- a/medium/feed.mustache
+++ b/medium/feed.mustache
@@ -344,6 +344,7 @@
           // var site = selectedThread.site
           // var url = 'https://'+site.slug+'.vertex360.co/post/'+selectedThread.subject.slug
           // $('#entity-content-iframe').attr('src', url)
+          reloadUI()
 
           $('.sidebar-link').each(function(i, link){
             $(this).click(function(event){
