--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -27,7 +27,7 @@
   				<ul>
             {{#threads}}
             <li>
-              <div style="display:flex">
+              <div style="display:flex;border-bottom:1px solid #ededed">
                 <img src="{{{site.image}}}=s28-c" alt="Vertex 360" />
                 <a style="flex:1" href="#">{{subject.title}}</a>
               </div>
