--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -23,12 +23,12 @@
                  <div class="swiper-container-subnav multinav">
                     <div class="swiper-wrapper">
 			<div class="swiper-slide">
-				<nav class="main_nav_underline">
+				<nav style="background:#c8c8c8" class="main_nav_underline">
   				<ul>
             {{#threads}}
-            <li>
-              <div style="display:flex;border-bottom:1px solid #ededed">
-                <img src="{{{site.image}}}=s28-c" alt="Vertex 360" />
+            <li style="border-bottom:1px solid #ededed">
+              <div style="min-height:72px;display:flex;">
+                <img style="width:44px;height:44px;margin-right:12px" src="{{{site.image}}}=s88-c" alt="Vertex 360" />
                 <a style="flex:1" href="#">{{subject.title}}</a>
               </div>
             </li>
