--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -22,11 +22,11 @@
                   <!-- Slider -->
                  <div class="swiper-container-subnav multinav">
                     <div class="swiper-wrapper">
-			<div class="swiper-slide">
-				<nav style="background:#c8c8c8" class="main_nav_underline">
+			<div class="swiper-slide" style="background:#c8c8c8;">
+				<nav style="padding:0px;width:100%" class="main_nav_underline">
   				<ul>
             {{#threads}}
-            <li style="border-bottom:1px solid #ededed">
+            <li style="border-bottom:1px solid #ededed;width:100%;padding:0px;margin:0px">
               <div style="min-height:72px;display:flex;">
                 <img style="width:44px;height:44px;margin-right:12px" src="{{{site.image}}}=s88-c" alt="Vertex 360" />
                 <a style="flex:1" href="#">{{subject.title}}</a>
