--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -24,7 +24,7 @@
                     <div class="swiper-wrapper">
 			<div class="swiper-slide" style="background:#c8c8c8;">
 				<nav style="padding:0px;width:100%" class="main_nav_underline">
-  				<ul>
+  				<ul style="width:100%">
             {{#threads}}
             <li style="border-bottom:1px solid #ededed;width:100%;padding:0px;margin:0px">
               <div style="min-height:72px;display:flex;">
