--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -28,7 +28,7 @@
             {{#threads}}
             <li style="border-bottom:1px solid #ededed;width:100%;padding:0px;margin:0px">
               <div style="display:flex;padding:12px">
-                <img style="width:44px;height:44px;max-width:100%;margin-right:12px" src="{{{site.image}}}=s88-c" alt="Vertex 360" />
+                <img style="width:44px;height:44px;max-width:100%;margin-right:12px;border-radius:50%" src="{{{site.image}}}=s88-c" alt="Vertex 360" />
                 <a style="flex:1" href="#">{{subject.title}}</a>
               </div>
             </li>
