--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -30,7 +30,7 @@
               <div style="display:flex;padding:12px">
                 <img style="width:44px;height:44px;max-width:100%;margin-right:12px;border-radius:50%" src="{{{site.image}}}=s88-c" alt="Vertex 360" />
                 <a style="flex:1;color:#333;font-weight:400" href="#">{{subject.title}}</a>
-                <small>{{site.name}} | {{subject.dateString}}</small>
+                <br /><small>{{site.name}} | {{subject.dateString}}</small>
               </div>
             </li>
             {{/threads}}
