--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -31,7 +31,9 @@
                 <img style="width:44px;height:44px;max-width:100%;margin-right:12px;border-radius:50%" src="{{{site.image}}}=s88-c" alt="Vertex 360" />
                 <a style="flex:1;color:#333;font-weight:400" href="#">{{subject.title}}</a>
               </div>
-              <small>{{site.name}} | {{subject.dateString}}</small>
+              <div style="text-align:right;padding:0px, 12px, 12px, 0px">
+                <small>{{site.name}} | {{subject.dateString}}</small>
+              </div>
             </li>
             {{/threads}}
   				</ul>
