--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -28,10 +28,10 @@
             {{#threads}}
             <li style="border-bottom:1px solid #ededed;width:100%;padding:0px;margin:0px">
               <div style="display:flex;padding:12px">
-                <img style="width:44px;height:44px;max-width:100%;margin-right:12px;border-radius:50%" src="{{{site.image}}}=s88-c" alt="Vertex 360" />
-                <a style="flex:1;color:#333;font-weight:400" href="#">{{subject.title}}</a>
+                <img style="width:48px;height:48px;max-width:100%;margin-right:12px;border-radius:50%" src="{{{site.image}}}=s96-c" alt="Vertex 360" />
+                <a style="flex:1;color:#333;font-weight:400;font-size:15px" href="#">{{subject.title}}</a>
               </div>
-              <div style="text-align:right;padding:0px, 12px, 12px, 0px">
+              <div style="font-size:12px;text-align:right;padding:0px 12px 12px 0px">
                 <small>{{site.name}} | {{subject.dateString}}</small>
               </div>
             </li>
